# MTConnect-Python-Agent

./: Dockerfile  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: publish-build.yml  validate-build.yml
mtconnect/: __init__.py  agent.py  device.py  error.py  helper.py  logging.py  loghandler.py  mtconnect.py  mtstorage.py  response.py  standard_list.py  storage.py  xmlhelper.py
scripts/: format_package.sh  lint_package.sh  publish_package.sh  run_container.sh  run_develop_container.sh  set_version.sh  test_package.sh
tests/: agent_test.py  storage_test.py  test_agent.py  test_device.xml  test_probe.xml  test_storage.py  test_xml.xml
